fixing overflow index end

--- a/src/layouts/scss/pages/_home-1.scss
+++ b/src/layouts/scss/pages/_home-1.scss
@@ -834,7 +834,7 @@
 
 /*********** faq section start **********/
 .merge-section {
-    padding-top: 150px;
+    padding-top: 260px;
 
     @include large-screen {
         padding-top: 0;
